0.3.0
Added hack to get round weird bug in gtksourceview-3.0 >3.14.0 not always getting correct undo/redo setting, menus for pkgs > 3.14.0 are not dimmed.
Fixed dNd for toolitems in prefs.
Done prefs.
Moved prefs to either ~/.KKEdit or ~/.KKEdit3 depending on build.
Done doc viewer.
Open external apps done.
Basic navigation done.
Main menus done.
Started gtk3 enabled.

0.2.12
Fixed occasional bug when runing certain tools on files with no language type.
Removed forced CFLAGS and CXXFLAGS.

0.2.11
Started on remote control using "kkedit @@Xddd" where X=G - goto line, X=S - search for define, and ddd is data ( line number search string.
Standardized source file copyright/licence headers.
Fixed undo/redo all.
Fixed regex anchors not always working for replace all.
Corrected icon entry in desktop files.
Updated 'Comment Selection' example tool to include commenting - sh, Python, Makefile, .desktop, Perl, C++, C, Objective-C, C/C++/ObjC Header, Java, Pascal, HTML.
Updated open file with line number to scroll to line num immediately.
Added optional switching to line number when opening file using /path/to/file@LINENUM.
Minor doxy documentation fix.

0.2.10
Fixed changed callback definition when closing.
Fixed toolbar button setsensitive on startup.
More tweaks for'Search For Define'.
Added email address to copyright notice in about box.
Updated about box web site link.
Tweaked 'Search For Define' to check for partial name.
Multiple hits now shown in Doxygen documentation.
Find in Doxygen documentation now MUCH faster.
Updated docs/Doxyfile.

0.2.9
Added seperators into 'View' menu.
Added toggle line nubers to 'View' menu.
Added toggle wrap lines to 'View' menu.
Added toggle higlight current line to 'View' menu.
Added toggle syntax highlight to 'View' menu.
Added toggle auto show completions to 'View' menu.
Fixed regex search missing first search term if it begins at the cursor position.

0.2.8
Added 'Diff two files' to example tools.